--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOLANDO</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <header>
+        <div class="main_container">
+            <div>
+                Donna Uomo Bambini
+            </div>
+
+            <img height="50px" src="./img/boolean-logo.png" alt="boolean-logo">
+
+
+            <i class="fa-regular fa-user"></i>
+            <i class="fa-light fa-heart"></i>
+            <i class="fa-solid fa-lock"></i>
+
+        </div>
+    </header>
+    <main>
+        <div>
+            <h3>Boolando</h3>
+            <h5>Spedizioni e reso gratuiti!</h5>
+
+        </div>
+        <div>
+            <div>
+                <!--prima immagine  -->
+                <img height="350px" src="./img/1.webp" alt="prima_immagine">
+                <div >
+                    <p>levis</p>
+                    <h5 class="mr_0">RELAXED FIT TEE UNISEX</h5>
+                    <p>14,99euro</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
