--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <div class="main_container">
             <div>
-                Donna Uomo Bambini
+                <h3> Donna Uomo Bambini</h3>
             </div>
-
-            <img height="50px" src="./img/boolean-logo.png" alt="boolean-logo">
-
-
-            <i class="fa-regular fa-user"></i>
-            <i class="fa-light fa-heart"></i>
-            <i class="fa-solid fa-lock"></i>
-
+            <div>
+                <img height="20px" src="./img/boolean-logo.png" alt="boolean-logo">
+            </div>
+            <div>
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-light fa-heart"></i>
+                <i class="fa-solid fa-lock"></i>
+            </div>
         </div>
     </header>
     <main>
@@ -36,7 +37,7 @@
             <div>
                 <!--prima immagine  -->
                 <img height="350px" src="./img/1.webp" alt="prima_immagine">
-                <div >
+                <div>
                     <p>levis</p>
                     <h5 class="mr_0">RELAXED FIT TEE UNISEX</h5>
                     <p>14,99euro</p>
