--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="main_container">
+        <div class="main_container width">
             <div>
                 <h3> Donna Uomo Bambini</h3>
             </div>
@@ -28,21 +28,41 @@
         </div>
     </header>
     <main>
-        <div>
-            <h3>Boolando</h3>
-            <h5>Spedizioni e reso gratuiti!</h5>
-
+        <div class="center_flex mt_20">
+            <div>
+                <h3>Boolando</h3>
+                <h5>Spedizioni e reso gratuiti!</h5>
+            </div>
         </div>
-        <div>
+        <div class="center_flex ">
             <div>
                 <!--prima immagine  -->
                 <img height="350px" src="./img/1.webp" alt="prima_immagine">
                 <div>
                     <p>levis</p>
-                    <h5 class="mr_0">RELAXED FIT TEE UNISEX</h5>
-                    <p>14,99euro</p>
+                    <h5>RELAXED FIT TEE UNISEX</h5>
+                    <p>14,99€</p>
                 </div>
             </div>
+            <!-- seconda -->
+            <div>
+                <img  height="350px" src="./img/2.webp" alt="seconda img">
+                <div>
+                    <p>Guess</p>
+                    <h5>ROSES TEE</h5>
+                    <p>20,89€</p>
+                </div>
+            </div>
+            <!-- terza -->
+            <div>
+                <img  height="350px" src="./img/3.webp" alt="terza img">
+                <div>
+                    <p>Come zuchhero filato</p>
+                    <h5>VOGLIA DI COLORI PASTELLO</h5>
+                    <p>129,89€</p>
+                </div>
+            </div>
+            <!--  -->
         </div>
     </main>
     <footer>
