--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="father_main">
         <div class="center_flex mt_20">
             <div>
                 <h3>Boolando</h3>
                 <h5>Spedizioni e reso gratuiti!</h5>
             </div>
         </div>
-        <div class="center_flex ">
+        <div class="center_flex  ">
             <div>
                 <!--prima immagine  -->
                 <img height="350px" src="./img/1.webp" alt="prima_immagine">
@@ -62,7 +62,33 @@
                     <p>129,89€</p>
                 </div>
             </div>
-            <!--  -->
+            <!-- quarta -->
+            <div>
+                <img  height="350px" src="./img/4.webp" alt="quarta img">
+                <div>
+                    <p>Levis</p>
+                    <h5>TEE UNISEX</h5>
+                    <p>14,99€</p>
+                </div>
+            </div>
+            <!-- quinta -->
+            <div>
+                <img  height="350px" src="./img/5.webp" alt="quinta img">
+                <div>
+                    <p>Maya deluxe</p>
+                    <h5>STRIPE BODILE</h5>
+                    <p>99,99€</p>
+                </div>
+            </div>
+            <!-- sesta -->
+            <div>
+                <img  height="350px" src="./img/6.webp" alt="sesta img">
+                <div>
+                    <p>Espirit</p>
+                    <h5>MAGLIONE - BLACK</h5>
+                    <p>29,99€</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
