--- a/index.html
+++ b/index.html
@@ -34,59 +34,59 @@
                 <h5>Spedizioni e reso gratuiti!</h5>
             </div>
         </div>
-        <div class="center_flex  ">
-            <div>
+        <div class="center_flex gap_f_10 ">
+            <div class="border">
                 <!--prima immagine  -->
                 <img height="350px" src="./img/1.webp" alt="prima_immagine">
                 <div>
-                    <p>levis</p>
+                    <p style="font-size: small;">levis</p>
                     <h5>RELAXED FIT TEE UNISEX</h5>
-                    <p>14,99€</p>
+                    <p style="color: red;">14,99€ <s style="color: black;font-size: small;">29,99€</s> </p>
                 </div>
             </div>
             <!-- seconda -->
-            <div>
+            <div class="border">
                 <img  height="350px" src="./img/2.webp" alt="seconda img">
                 <div>
-                    <p>Guess</p>
+                    <p style="font-size: small;">Guess</p>
                     <h5>ROSES TEE</h5>
-                    <p>20,89€</p>
+                    <p style="color: red;">20,89€ <s style="color: black;font-size: small;">29,99€</s> </p>
                 </div>
             </div>
             <!-- terza -->
-            <div>
+            <div class="border">
                 <img  height="350px" src="./img/3.webp" alt="terza img">
                 <div>
-                    <p>Come zuchhero filato</p>
+                    <p style="font-size: small;">Come zuchhero filato</p>
                     <h5>VOGLIA DI COLORI PASTELLO</h5>
-                    <p>129,89€</p>
+                    <p style="color: red;">129,89€ <s style="color: black;font-size: small;">184,99€</s> </p>
                 </div>
             </div>
             <!-- quarta -->
-            <div>
+            <div class="border">
                 <img  height="350px" src="./img/4.webp" alt="quarta img">
                 <div>
-                    <p>Levis</p>
+                    <p style="font-size: small;">Levis</p>
                     <h5>TEE UNISEX</h5>
-                    <p>14,99€</p>
+                    <p style="color: red;">14,99€ <s style="color: black; font-size: small; ">29,99€</s> </p>
                 </div>
             </div>
             <!-- quinta -->
-            <div>
+            <div class="border">
                 <img  height="350px" src="./img/5.webp" alt="quinta img">
                 <div>
-                    <p>Maya deluxe</p>
+                    <p style="font-size: small;">Maya deluxe</p>
                     <h5>STRIPE BODILE</h5>
-                    <p>99,99€</p>
+                    <p style="color: red;">99,99€</p>
                 </div>
             </div>
             <!-- sesta -->
-            <div>
+            <div class="border">
                 <img  height="350px" src="./img/6.webp" alt="sesta img">
                 <div>
-                    <p>Espirit</p>
+                    <p style="font-size: small;">Espirit</p>
                     <h5>MAGLIONE - BLACK</h5>
-                    <p>29,99€</p>
+                    <p style="color: red;">29,99€</p>
                 </div>
             </div>
         </div>
