footer first part

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <!-- seconda -->
             <div class="border">
-                <img  height="350px" src="./img/2.webp" alt="seconda img">
+                <img height="350px" src="./img/2.webp" alt="seconda img">
                 <div>
                     <p style="font-size: small;">Guess</p>
                     <h5>ROSES TEE</h5>
@@ -55,7 +55,7 @@
             </div>
             <!-- terza -->
             <div class="border">
-                <img  height="350px" src="./img/3.webp" alt="terza img">
+                <img height="350px" src="./img/3.webp" alt="terza img">
                 <div>
                     <p style="font-size: small;">Come zuchhero filato</p>
                     <h5>VOGLIA DI COLORI PASTELLO</h5>
@@ -64,7 +64,7 @@
             </div>
             <!-- quarta -->
             <div class="border">
-                <img  height="350px" src="./img/4.webp" alt="quarta img">
+                <img height="350px" src="./img/4.webp" alt="quarta img">
                 <div>
                     <p style="font-size: small;">Levis</p>
                     <h5>TEE UNISEX</h5>
@@ -73,7 +73,7 @@
             </div>
             <!-- quinta -->
             <div class="border">
-                <img  height="350px" src="./img/5.webp" alt="quinta img">
+                <img height="350px" src="./img/5.webp" alt="quinta img">
                 <div>
                     <p style="font-size: small;">Maya deluxe</p>
                     <h5>STRIPE BODILE</h5>
@@ -82,7 +82,7 @@
             </div>
             <!-- sesta -->
             <div class="border">
-                <img  height="350px" src="./img/6.webp" alt="sesta img">
+                <img height="350px" src="./img/6.webp" alt="sesta img">
                 <div>
                     <p style="font-size: small;">Espirit</p>
                     <h5>MAGLIONE - BLACK</h5>
@@ -91,7 +91,24 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer style="background-color: rgba(0, 0, 0, 0.800);">
+        <div class="father_main">
+            <div>
+                <h3 style="color: white;">Boolando s.r.l</h3>
+                <p style="color: white; font-size: smaller;">Informazioni legali Informativa sulla privacy Diritti di
+                    recesso</p>
+            </div>
+            <div>
+                <h4 style="color: white;">trovaci anche su</h4>
+                <div>
+                    <i style="color: white;" class="fa-brands fa-square-twitter"></i>
+                    <i style="color: white;" class="fa-brands fa-square-facebook"></i>
+                    <i style="color: white;" class="fa-brands fa-square-instagram"></i><i style="color: white;"
+                        class="fa-brands fa-square-pinterest"></i><i style="color: white;"
+                        class="fa-brands fa-square-youtube"></i>
+                </div>
+            </div>
+        </div>
 
     </footer>
 </body>
