--- a/index.html
+++ b/index.html
@@ -13,41 +13,41 @@
 
 <body>
     <header>
-        <div class="main_container width">
+        <div class=" main_container width p_10" >
             <div>
-                <h3> Donna Uomo Bambini</h3>
+                <h3 style="color: white;font-size:small;"> Donna Uomo Bambini</h3>
             </div>
             <div>
                 <img height="20px" src="./img/boolean-logo.png" alt="boolean-logo">
             </div>
             <div>
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-light fa-heart"></i>
-                <i class="fa-solid fa-lock"></i>
+                <i style="color: white;font-size:small;"class="fa-regular fa-user"></i>
+                <i style="color: white;font-size:small;"class="fa-regular fa-heart"></i>
+                <i style="color: white;font-size:small;"class="fa-solid fa-lock"></i>
             </div>
         </div>
     </header>
-    <main class="father_main">
-        <div class="center_flex mt_20">
+    <main class="father_main text_align mb_50">
+        <div class="center_flex mt_20 mb_20">
             <div>
                 <h3>Boolando</h3>
                 <h5>Spedizioni e reso gratuiti!</h5>
             </div>
         </div>
-        <div class="center_flex gap_f_10 ">
-            <div class="border">
-                <!--prima immagine  -->
-                <img height="350px" src="./img/1.webp" alt="prima_immagine">
-                <div>
-                    <p style="font-size: small;">levis</p>
-                    <h5>RELAXED FIT TEE UNISEX</h5>
-                    <p style="color: red;">14,99€ <s style="color: black;font-size: small;">29,99€</s> </p>
-                </div>
+        <div class="center_flex c_gap_f_10 gap_f_10 ">
+            <div class="border  ">
+                <!--prima immagine --> 
+                    <img height="350px" src="./img/1.webp" alt="prima_immagine">
+                    <div class="text_align_start">
+                        <p style="font-size: small;">levis</p>
+                        <h5>RELAXED FIT TEE UNISEX</h5>
+                        <p style="color: red;">14,99€ <s style="color: black;font-size: small;">29,99€</s> </p>
+                    </div>
             </div>
             <!-- seconda -->
-            <div class="border">
+            <div class="border ">
                 <img height="350px" src="./img/2.webp" alt="seconda img">
-                <div>
+                <div class="text_align_start">
                     <p style="font-size: small;">Guess</p>
                     <h5>ROSES TEE</h5>
                     <p style="color: red;">20,89€ <s style="color: black;font-size: small;">29,99€</s> </p>
@@ -56,7 +56,7 @@
             <!-- terza -->
             <div class="border">
                 <img height="350px" src="./img/3.webp" alt="terza img">
-                <div>
+                <div class="text_align_start">
                     <p style="font-size: small;">Come zuchhero filato</p>
                     <h5>VOGLIA DI COLORI PASTELLO</h5>
                     <p style="color: red;">129,89€ <s style="color: black;font-size: small;">184,99€</s> </p>
@@ -65,7 +65,7 @@
             <!-- quarta -->
             <div class="border">
                 <img height="350px" src="./img/4.webp" alt="quarta img">
-                <div>
+                <div class="text_align_start">
                     <p style="font-size: small;">Levis</p>
                     <h5>TEE UNISEX</h5>
                     <p style="color: red;">14,99€ <s style="color: black; font-size: small; ">29,99€</s> </p>
@@ -74,7 +74,7 @@
             <!-- quinta -->
             <div class="border">
                 <img height="350px" src="./img/5.webp" alt="quinta img">
-                <div>
+                <div class="text_align_start">
                     <p style="font-size: small;">Maya deluxe</p>
                     <h5>STRIPE BODILE</h5>
                     <p style="color: red;">99,99€</p>
@@ -83,7 +83,7 @@
             <!-- sesta -->
             <div class="border">
                 <img height="350px" src="./img/6.webp" alt="sesta img">
-                <div>
+                <div class="text_align_start">
                     <p style="font-size: small;">Espirit</p>
                     <h5>MAGLIONE - BLACK</h5>
                     <p style="color: red;">29,99€</p>
@@ -92,20 +92,20 @@
         </div>
     </main>
     <footer style="background-color: rgba(0, 0, 0, 0.800);">
-        <div class="father_main">
+        <div class="main_container flex_space_between p_10 ">
             <div>
-                <h3 style="color: white;">Boolando s.r.l</h3>
+                <h3 style="color: white;font-size: smaller;">Boolando s.r.l</h3>
                 <p style="color: white; font-size: smaller;">Informazioni legali Informativa sulla privacy Diritti di
                     recesso</p>
             </div>
             <div>
-                <h4 style="color: white;">trovaci anche su</h4>
+                <h4 style="color: white;font-size: smaller;">trovaci anche su</h4>
                 <div>
-                    <i style="color: white;" class="fa-brands fa-square-twitter"></i>
-                    <i style="color: white;" class="fa-brands fa-square-facebook"></i>
-                    <i style="color: white;" class="fa-brands fa-square-instagram"></i><i style="color: white;"
-                        class="fa-brands fa-square-pinterest"></i><i style="color: white;"
-                        class="fa-brands fa-square-youtube"></i>
+                    <i style="color: white; font-size: smaller;" class="fa-brands fa-square-twitter"></i>
+                    <i style="color: white; font-size: smaller;" class="fa-brands fa-square-facebook"></i>
+                    <i style="color: white; font-size: smaller;" class="fa-brands fa-square-instagram"></i>
+                    <i style="color: white; font-size: smaller;" class="fa-brands fa-square-pinterest"></i>
+                    <i style="color: white; font-size: smaller;" class="fa-brands fa-square-youtube"></i>
                 </div>
             </div>
         </div>
