finally finishe, now is perfect

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </main>
     <footer style="background-color: rgba(0, 0, 0, 0.800);">
-        <div class="main_container flex_space_between p_10 ">
+        <div class="footer_container flex_space_between p_10 ">
             <div>
                 <h3 style="color: white;font-size: smaller;">Boolando s.r.l</h3>
                 <p style="color: white; font-size: smaller;">Informazioni legali Informativa sulla privacy Diritti di
